NOCC 0.9.6    June 2?, 2004

    * Added possibility to mark a message as read or unread - IMAP only
      (Arnaud Boudou, RFE #587725).
    * Added typed domain names option and login suffix option (Leif Gustafson,
      patch #975016).
    * Added graphical smilies support (Arnaud Boudou).
    * Added IMAP folder delete (Arnaud Boudou).
    * Correct multiple bugs on IMAP folder management (Arnaud Boudou).
    * Downloadable mails (jourds and Arnaud Boudou, patch #811868).
    * Move on next message on delete (jourds and Arnaud Boudou, patch #811856).
    * Prompt on delete (jourds and Arnaud Boudou, patch #811848).
    * Added contact list (jourds and Arnaud Boudou, patch #811843).
    * Multiple send prevention (jourds and Arnaud Boudou, patch #811836)
    * Added Usenet signature separator user preference (jourds and Arnaud
      Boudou, patch #811823).
    * Wrap outgoing messages user preference (jourds and Arnaud Boudou,
      patch #811816).
    * Added PHP 5.0 compatibility (Arnaud Boudou).
    * Added support for displaying RFC2045-encoded words, used in headers.
      (Alexander Sabournekov).
    * Preferences can be disabled by unsetting/clearing $conf->prefs_dir
      (Alexander Sabournekov).
    * Added fix for 'file_uploads=0' (RedHat default).
    * Applied patch intended to fix XSS vulnerability (Ulf Harnhammar).
    * Fixed some warnings when not using user_prefs or user_filters
      (Paulo Matos).
    * A few small cosmetic fixes (Paulo Matos).
    * Attachment array being initialised as integer zero (Paulo Matos).
    * Fixed MIME line termination incompliance with RFC822 (Paulo Matos).
    * Removed 'delete_button_icon' option, as it didn't work (#575741).
    * Rewrote 'prefs.php' as 'user_prefs.php'.
    * Added a function 'get_default_from_address' to allow admins to
      customise the default address in their conf.php (#563396).
    * A whole load of tidying up of the folder-related code.